@@ -44,6 +44,9 @@ Here is a history of user visible changes to Mailman.
 
   Bug fixes and other patches
 
+    - The 'list run by' addresses in web page footers are now just the
+      list-owner address.  (LP: #1694384)
+
     - Changed member_verbosity_threshold from a >= test to a strictly > test
       to avoid the issue of moderating every post when the threshold = 1.
       (LP: #1693366)
